top banner overlap issue fixed

--- a/_sass/pages/_shared.scss
+++ b/_sass/pages/_shared.scss
@@ -125,7 +125,9 @@
     cursor: pointer;
     background-color: $grey;
     transition: all .3s ease-in-out;
-
+    @include media-breakpoint-down(sm) {
+      margin: 4px 5px;
+    }
     @media (min-width: 992px) and (max-width: 1500px) {
       margin: 4px 3px;
     }
